# reviewlens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PRD.md  PRD_v1.0.0.md  README.md  SECURITY.md  deny.toml  install.sh  project-summary.md  reviewer.toml  reviewer.toml.example  reviewlens.toml  reviewlens.toml.example
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: check.rs  index.rs  mod.rs  print_config.rs  version.rs
crates/cli/tests/: ci_json_logs.rs  ci_mode.rs  only_changed_default.rs  smoke.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  diff_parser.rs  error.rs  lib.rs  telemetry.rs
crates/engine/src/llm/: anthropic.rs  deepseek.rs  mod.rs  openai.rs
crates/engine/src/rag/: mod.rs
crates/engine/src/report/: mod.rs
crates/engine/src/scanner/: convention_deviation.rs  conventions.rs  mod.rs  secrets.rs  server_xss_go.rs
crates/engine/tests/: budget.rs  code_quality_hotspots.rs  config.rs  convention_deviation.rs  diff_hunk.rs  diff_parser.rs  exit_codes.rs  http_timeouts_go.rs  index_table.rs  null_provider.rs  paths.rs  rag.rs  redaction.rs  report.rs  scanner.rs  sequence_diagram.rs  server_xss_go.rs  sql_injection_go.rs  telemetry.rs
docs/: config.md  convention_deviation.md  evaluation.md  http_timeouts_go.md  quickstart.md  release-checklist.md  sample_report.md  secrets.md  server_xss_go.md  sql_injection_go.md  troubleshooting.md
docs/ci/: github_action_example.yml  github_checks_helper.md  gitlab_ci_example.yml
fixtures/clean/: index.json  review_report.md
fixtures/http-timeout/: index.json  main.go  review_report.md  reviewlens.toml
fixtures/secrets/: index.json  main.go  review_report.md
fixtures/server-xss/: index.json  main.go  review_report.md  reviewlens.toml
fixtures/sql-injection/: index.json  main.go  review_report.md  reviewer.toml
homebrew-tap/: reviewer-cli.rb  reviewlens.rb
scripts/: ci_helper.py  eval.sh  update-homebrew-formula.py
