[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/engine",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Bene and AI <bensatriya3@gmail.com>"]
description = "An intelligent, context-aware, and security-first code review agent."
license = "Apache-2.0"
repository = "https://github.com/Review-LensAi/reviewlens"
homepage = "https://github.com/Review-LensAi/reviewlens"

[workspace.dependencies]
# --- Internal Crates ---
# To be filled in as we build

# --- External Crates ---
# Logging
log = "0.4"
env_logger = "0.11"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Filesystem walking
walkdir = "2"

# Tracing & Telemetry (for later)
# tracing = "0.1"
# tracing-subscriber = "0.3"
