[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core logic for the Intelligent Code Review Agent, including analysis, RAG, and reporting."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true

# Crate-specific dependencies
# Example: for git operations
# git2 = "0.18"
# Example: for regex-based scanning
regex = "1.10"
once_cell = "1"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"

[features]
default = []
owasp_top_5 = []
secrets = []

[dev-dependencies]
tempfile = "3"
